<resources>

    <!--App Name-->
    <string name="app_name">Timer</string>

    <!--Activities Name-->
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_time_up">TimeUpActivity</string>

    <!--Preferences-->
    <string name="pref_title_ringtone">Alarm Tone</string>
    <string name="pref_title_vibrate">Vibrate</string>

    <!--Menu-->
    <string name="settings">Settings</string>

    <!--Main Activity-->
    <string name="_00_00_00">00:00:00</string>

    <string name="colon_str">:</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="seconds">Seconds</string>

    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="reset">RESET</string>

    <!--Time Up Activity-->
    <string name="time_up">Time Up&#8230;</string>
    <string name="ok">OK</string>

</resources>
